--- a/style.css
+++ b/style.css
@@ -1110,8 +1110,10 @@ nav.post-navigation {
   nav.post-navigation .nav-next a span {
     font-family: "FontAwesome", Arial, sans-serif; }
 
-.jp-relatedposts-items .jp-relatedposts-posts h4 {
-  height: 100px; }
-  .jp-relatedposts-items .jp-relatedposts-posts h4 a {
-    color: #1E1E1E;
-    font-size: 1.5rem; }
+.hentry div#jp-relatedposts div.jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-title a {
+  color: grey;
+  font-size: 1.5rem;
+  line-height: 0.5rem; }
+
+.hentry div#jp-relatedposts div.jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-context {
+  font-size: 1.2rem; }
