--- a/style.css
+++ b/style.css
@@ -1114,6 +1114,8 @@ h4.jp-relatedposts-post-title a {
   color: grey;
   font-size: 1.5rem;
   line-height: 0.5rem; }
+  h4.jp-relatedposts-post-title a:hover {
+    color: #FFB040; }
 
 p.jp-relatedposts-post-context {
   font-size: 1.2rem; }
