Iniciando style de relatedposts

--- a/style.css
+++ b/style.css
@@ -1112,16 +1112,13 @@ nav.post-navigation {
 
 .jp-relatedposts-post h4.jp-relatedposts-post-title a {
   color: #FFB040;
-  font-size: 1.1rem;
+  font-size: 1rem !important;
   line-height: 0.5rem; }
   .jp-relatedposts-post h4.jp-relatedposts-post-title a:hover {
     color: white; }
 
 .jp-relatedposts-post h4.jp-relatedposts-post-title:hover {
-  color: #FFB040; }
-
-.jp-relatedposts-post p.jp-relatedposts-post-context {
-  font-size: 0.8rem; }
+  background-color: #FFB040; }
 
 .jp-relatedposts-items p {
   font-size: 1rem !important; }
