Iniciando style de relatedposts

--- a/style.css
+++ b/style.css
@@ -1112,7 +1112,9 @@ nav.post-navigation {
 
 .jp-relatedposts-post h4.jp-relatedposts-post-title a {
   color: #FFB040;
-  font-size: 1rem !important; }
+  font-size: 1.2rem !important; }
+  .jp-relatedposts-post h4.jp-relatedposts-post-title a:hover {
+    color: grey; }
 
 .jp-relatedposts-items p {
   font-size: 1rem !important; }
