--- a/style.css
+++ b/style.css
@@ -863,6 +863,8 @@ h3 {
         display: inline-block;
         margin-right: 0.4rem;
         font-size: 1.25rem; }
+  .footer__social p:nth-child(2) {
+    margin-bottom: 0.5rem; }
   .footer__social--redes li {
     display: inline-block;
     font-size: 1rem;
