--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ h3 {
   text-align: center;
   padding: 3em 0;
   margin-top: 3rem;
-  background-image: url("http://alexballera.com/wp-content/themes/twentyfifteen-child/img/background-header.jpg");
+  background-image: url("http://i1.wp.com/alexballera.com/wp-content/uploads/2016/02/background-header.jpg?resize=1024%2C350");
   background-color: #EEEEEE;
   background-size: cover;
   background-position: center;
@@ -577,12 +577,9 @@ h3 {
         padding: 1rem; }
         @media screen and (min-width: 48em) {
           .content__responsive--responsive--picture img {
-            width: 250px;
+            width: 270px;
             height: 160px;
             vertical-align: middle; } }
-        @media screen and (min-width: 90em) {
-          .content__responsive--responsive--picture img {
-            width: 632px; } }
     .content__responsive--responsive--text {
       padding-top: 1em; }
       @media screen and (min-width: 48em) {
