--- a/style.css
+++ b/style.css
@@ -1040,9 +1040,6 @@ header.entry-header h1 {
   font-weight: bold;
   font-family: "FontAwesome", Arial, sans-serif; }
 
-.author-description p.author-bio {
-  font-size: 1rem; }
-
 footer.entry-footer span {
   font-size: 1rem; }
   footer.entry-footer span.posted-on::before, footer.entry-footer span.byline::before, footer.entry-footer span.cat-links::before, footer.entry-footer span.edit-link::before, footer.entry-footer span.tags-links::before {
@@ -1066,9 +1063,9 @@ nav.post-navigation {
 /*
 * Disqus
 */
-#layout {
-  width: 80%;
-  margin: 0 auto; }
+div#layout {
+  width: 80% !important;
+  margin: 0 auto !important; }
 
 .jp-relatedposts-post h4.jp-relatedposts-post-title a {
   color: #FFB040;
