--- a/style.css
+++ b/style.css
@@ -976,6 +976,9 @@ h3 {
     line-height: 1.5rem;
     height: 100%; } }
 
+/*
+* Custom Partent Theme
+*/
 body {
   font-size: 16px;
   font-family: "FontAwesome", Arial, sans-serif;
@@ -990,6 +993,9 @@ body {
 .site-main {
   padding-top: 3rem; }
 
+/*
+* Single Post
+*/
 .post-thumbnail img {
   width: 100%; }
 
@@ -1065,14 +1071,6 @@ nav.post-navigation {
   nav.post-navigation .nav-next a span {
     font-family: "FontAwesome", Arial, sans-serif; }
 
-/*
-* Disqus
-*/
-div#disqus_thread {
-  width: 85%;
-  margin: 1rem auto;
-  padding: 1rem; }
-
 .jp-relatedposts-post h4.jp-relatedposts-post-title a {
   color: #FFB040;
   font-size: 1.5rem !important; }
@@ -1082,5 +1080,16 @@ div#disqus_thread {
 .jp-relatedposts-items p {
   font-size: 1rem !important; }
 
+/*
+* Disqus
+*/
+div#disqus_thread {
+  width: 85%;
+  margin: 1rem auto;
+  padding: 1rem; }
+
+/*
+* MailChimp
+*/
 .yikes-mailchimp-container span.edit-link a.post-edit-lonk {
   color: #1E1E1E; }
