Cambiando icon wp

--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ h3 {
         color: #EFDA4E; }
       .header__languages--tech li i.icon-ruby-on-rails {
         color: #91242E; }
-      .header__languages--tech li i.fa-wordpress {
+      .header__languages--tech li i.icon-wordpress {
         color: #0087BE; }
       .header__languages--tech li i.fa-git {
         color: #F34D27; }
